@@ -128,7 +128,9 @@ typedef enum {
 	SERD_ANON_S  = 1 << 1,  ///< Start of anonymous subject
 	SERD_ANON_O  = 1 << 2,  ///< Start of anonymous object
 	SERD_LIST_S  = 1 << 3,  ///< Start of list subject
-	SERD_LIST_O  = 1 << 4   ///< Start of list object
+	SERD_LIST_O  = 1 << 4,  ///< Start of list object
+	SERD_TERSE_S = 1 << 5,  ///< Terse serialisation of new subject
+	SERD_TERSE_O = 1 << 6   ///< Terse serialisation of new object
 } SerdStatementFlag;
 
 /// Bitwise OR of SerdStatementFlag values
